--- a/html/Galeria.html
+++ b/html/Galeria.html
@@ -49,7 +49,7 @@
             </div>
     </main>
     <footer>
-        <div class="grupo1">
+        <div class="footergrande">
             <div class="box">
                 <figure>
                     <a href="#">
@@ -72,8 +72,8 @@
                 </div>
             </div>
         </div>
-        <div class="grupo2">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>JDev</b></small>
+        <div class="subfooter">
+            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jess</b></small>
         </div>
     </footer>
 </body>
