--- a/html/Servicios.html
+++ b/html/Servicios.html
@@ -74,7 +74,7 @@
                 </ul>
     </main>
     <footer>
-        <div class="grupo1">
+        <div class="footergrande">
             <div class="box">
                 <figure>
                     <a href="#">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-        <div class="grupo2">
+        <div class="subfooter">
             <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>JDev</b></small>
         </div>
     </footer>
