--- a/html/Productos.html
+++ b/html/Productos.html
@@ -67,7 +67,7 @@
                 </ul>
     </main>
     <footer>
-        <div class="grupo1">
+        <div class="footergrande">
             <div class="box">
                 <figure>
                     <a href="#">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <div class="grupo2">
+        <div class="subfooter">
             <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>JDev</b></small>
         </div>
     </footer>
