--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>   
     </main>
     <footer>
-        <div class="grupo1">
+        <div class="footergrande">
             <div class="box">
                 <figure>
                     <a href="#">
@@ -58,8 +58,8 @@
                 </div>
             </div>
         </div>
-        <div class="grupo2">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>JDev</b></small>
+        <div class="subfooter">
+            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jess</b></small>
         </div>
     </footer>
 </body>
