Se agrega bootstrap a todas las secciones

--- a/html/Productos.html
+++ b/html/Productos.html
@@ -7,6 +7,8 @@
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
 </head>
@@ -26,45 +28,91 @@
     </header>
     <main class="fondomain">
         <h1 class="hTitulo">FINGER FOOD - CATERING</h1>
-            <h2>Sandwiches</h2>
-                <ul>
-                    <li><p>Sandwiches de Miga (tradicionales y especiales en pan blanco o salvado)</p></li>
-                    <li><p>Sandwiches de Matambre (figaza)</p></li>
-                    <li><p>Sandwiches de Pollo, lechuga y tomate (figaza)</p></li>
-                </ul>
-                <h2>Pizzetas</h2>
-                <ul>
-                    <li><p>Tomate y Muzarella</p></li>
-                    <li><p>Cebolla y Muzarella</p></li>
-                </ul>
-                <h2>Empanadas</h2>
-                <ul>
-                    <li><p>Pollo</p></li>
-                    <li><p>Carne</p></li>
-                    <li><p>Jamón y Queso</p></li>
-                    <li><p>Caprese</p></li>
-                    <br>
-                </ul>
-        <h1 class="hTitulo">PICADAS PARA REGALAR</h1>    
-                <h2>Para 2 o 3 Personas (cerveza opcional)</h2>
-                <ul>
-                    <li><p>Papas fritas y Maní salado</p></li>
-                    <li><p>Fiambres: jamón cocido,crudo,salame,mortadela</p></li>
-                    <li><p>QuesoS: Pategrás y Roquefort</p></li>
-                    <li><p>Berenjeas al escabeche y aceitunas</p></li>
-                    <br>
-                </ul>
-        <h1 class="hTitulo">DESAYUNOS/MERIENDAS</h1>    
-                <ul>
-                    <li><p>Jugo de naranja individual</p></li>
-                    <li><p>Medialunas</p></li>
-                    <li><p>Brownie/pastafrola/chocotorta</p></li>
-                    <li><p>Obleas rellenas</p></li>
-                    <li><p>Golosinas</p></li>
-                    <li><p>Alfajorcitos</p></li>
-                    <li><p>Café/Té</p></li>
-                    <br>
-                </ul>
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA8.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA9.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <h1 class="hTitulo">PARA REGALAR</h1>
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA6.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA7.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA6.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footergrande">
