--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -7,6 +7,8 @@
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
 </head>
@@ -43,8 +45,7 @@
                 
                 <label for="consulta" class="form-label"> Consulta:</label>
                 <textarea name="" id="consulta" cols="20" rows="10" placeholder="Ingrese su consulta"></textarea>
-                
-                <button type="submit" class="enviar" value="#"> Enviar </button>
+                <button type="button" class="btn btn-outline-warning" id="enviar">Enviar</button>
             </form>
         </div>
     </main>
