--- a/html/Galeria.html
+++ b/html/Galeria.html
@@ -7,6 +7,8 @@
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
 <body>
@@ -25,28 +27,12 @@
     </header>
     <main class="fondomain">
         <h1 class="hTitulo">EVENTOS</h1>
-            <h2>Eventos realizados</h2>
-            <div class="imag">
-                <img src="../imagenes/FIESTA1.png" alt="#">
-                <img src="../imagenes/FIESTA2.png" alt="#">
-                <img src="../imagenes/FIESTA3.png" alt="#">
-                <img src="../imagenes/FIESTA4.png" alt="#">
-                <img src="../imagenes/FIESTA5.png" alt="#">
-                <img src="../imagenes/FIESTA6.png" alt="#">
-            </div>
-        <h1 class="hTitulo">PRODUCTOS</h1>
-            <h2>Conocé nuestros productos ZUNAKOKO</h2>
-            <div class="imag">
-                <img src="../imagenes/ZUNA1.png" alt="#">
-                <img src="../imagenes/ZUNA2.png" alt="#">
-                <img src="../imagenes/ZUNA3.png" alt="#">
-                <img src="../imagenes/ZUNA4.png" alt="#">
-                <img src="../imagenes/ZUNA5.png" alt="#">
-                <img src="../imagenes/ZUNA6.png" alt="#">
-                <img src="../imagenes/ZUNA7.png" alt="#">
-                <img src="../imagenes/ZUNA8.png" alt="#">
-                <img src="../imagenes/ZUNA9.png" alt="#">
-            </div>
+        <div class="contenedorGal">
+            <img src="../imagenes/FIESTA5.png" class="img-thumbnail" alt="...">
+            <img src="../imagenes/FIESTA3.png" class="img-thumbnail" alt="...">
+            <img src="../imagenes/FIESTA1.png" class="img-thumbnail" alt="...">
+            <img src="../imagenes/FIESTA2.png" class="img-thumbnail" alt="...">
+        </div>    
     </main>
     <footer>
         <div class="footergrande">
