--- a/html/Servicios.html
+++ b/html/Servicios.html
@@ -7,6 +7,8 @@
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
 </head>
@@ -25,53 +27,64 @@
         </nav>
     </header>
     <main class="fondomain">
-        <h1 class="hTitulo">SERVICIOS</h1>
-            <h2>Pizza Party</h2>
-                <ul>
-                    <li><b><p>Entrada:</p></b></li><br>
-                    <li><p>Panes saborizados de Ajo y parmesano, y albahaca</p></li>
-                    <li><p>Empanadas de carne, jamón y queso, pollo y Caprese</p></li><br>
-                    <li><b><p>10 Variedades de pizzas:</p></b></li><br>
-                    <li><p>Muzzarella</p></li>
-                    <li><p>Jamón y Morrones</p></li>
-                    <li><p>Rúcula</p></li>
-                    <li><p>Huevo</p></li>
-                    <li><p>Napolitana</p></li>
-                    <li><p>Roquefort</p></li>
-                    <li><p>Calabreza</p></li>
-                    <li><p>Palmitos</p></li>
-                    <li><p>Ananá</p></li>
-                    <li><p>Cebolla y queso</p></li><br>
-                </ul>
-        <h1 class="hTitulo">ADICIONALES</h1>    
-            <h2>Picadas</h2>
-                <ul>
-                    <li><p>Papas fritas, Maní salado, chizitos</p></li>
-                    <li><p>Fiambres: jamón cocido,crudo,salame,mortadela</p></li>
-                    <li><p>QuesoS: Pategrás y Roquefort</p></li>
-                    <li><p>Berenjeas y pollo al escabeche</p></li>
-                    <li><p>Aceitunas negras y verdes</p></li>
-                    <li><p>Panes</p></li><br>
-                </ul>
-            <h2>Bebidas</h2>
-                <ul>
-                    <li><p>Gaseosas Linea CocaCola</p></li>
-                    <li><p>Aguas Saborizadas</p></li>
-                    <li><p>Agua Mineral</p></li>
-                    <li><p>Cerveza</p></li>
-                    </ul>
-            <h2>Mesa Dulce</h2>
-                <ul>
-                    <li><b><p>Postres Caseros a elección</p></b></li>
-                    <li><b><p>(según cantidad de invitados)</p></b></li><br>
-                    <li><p>Flan</p></li>
-                    <li><p>Budín de pan</p></li>
-                    <li><p>Torta de ricota/Pastafrola</p></li>
-                    <li><p>Panqueques con dulce de leche</p></li>
-                    <li><p>Chocotorta</p></li>
-                    <li><p>Ensalada de frutas</p></li>
-                    <li><p>Variedades de té y café</p></li><br>
-                </ul>
+        <h1 class="hTitulo">PIZZA PARTY</h1>
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">ENTRADA: Panes saborizados de Ajo y parmesano, y albahaca</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/FIESTA2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">ENTRADA: Empanadas de carne, jamón y queso, pollo y Caprese</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/FIESTA6.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">10 variedades de pizzas</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <h1 class="hTitulo">ADICIONALES</h1>
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/bebidas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">BEBIDAS: Agua, Cerveza, Gaseosas linea Coca,Aguas zaborizadas</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">PICADAS: Quesos,fiambres, snacks, pickles, panes</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">MESA DULCE: Amplia variedad de postres caseros</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footergrande">
@@ -98,7 +111,7 @@
             </div>
         </div>
         <div class="subfooter">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>JDev</b></small>
+            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jess</b></small>
         </div>
     </footer>
 </body>
