--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
-    <link rel="stylesheet" type="text/css" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="header__navigation">
-            <a href="index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
+            <a href="../index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
             <a onclick="toggleShowMenu()" id="menuIcon"><i class="fas fa-bars"></i></a>
             <ul class="navigation__menu" id="navMenu">
                 <li class="menu__item"><a href="../index.html">INICIO</a></li>
