--- a/html/Productos.html
+++ b/html/Productos.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
-    <link rel="stylesheet" type="text/css" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="header__navigation">
-            <a href="index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
+            <a href="../index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
             <a onclick="toggleShowMenu()" id="menuIcon"><i class="fas fa-bars"></i></a>
             <ul class="navigation__menu" id="navMenu">
                 <li class="menu__item"><a href="../index.html">INICIO</a></li>
@@ -31,26 +31,26 @@
         <div class="container">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
-                    </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/ZUNA1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">PIZZETAS: muzzarella - cebolla y queso</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA4.png" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA9.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">FORSFORITOS: JyQ</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">EMPANADAS: Carne - Jamón y Queso</p>
                     </div>
                 </div>
               </div>
@@ -59,26 +59,26 @@
         <div class="container">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/ZUNA5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">CHIPS: pan blanco o salvado, JyQ o Crudo y Queso</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/ZUNA8.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">SANDWICHES DE MIGA: triples - premium</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA9.png" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">SANDWICHES DE POLLO: con lechuga y tomate</p>
                     </div>
                 </div>
               </div>
@@ -88,26 +88,26 @@
         <div class="container">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/ZUNA6.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">PICADAS</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/ZUNA7.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">TORTA DE SANDWICHES</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA6.png" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/ZUNA10.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text</p>
+                      <p class="card-text">DESAYUNOS Y MERIENDAS</p>
                     </div>
                 </div>
               </div>
