--- a/html/Servicios.html
+++ b/html/Servicios.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title> 3 Soles Pizza Party </title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
-    <link rel="stylesheet" type="text/css" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f1608fe7fd.js" crossorigin="anonymous"></script>
     <script src="../js/header.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="header__navigation">
-            <a href="index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
+            <a href="../index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
             <a onclick="toggleShowMenu()" id="menuIcon"><i class="fas fa-bars"></i></a>
             <ul class="navigation__menu" id="navMenu">
                 <li class="menu__item"><a href="../index.html">INICIO</a></li>
@@ -31,15 +31,15 @@
         <div class="container">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA4.png" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/FIESTA13.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">ENTRADA: Panes saborizados de Ajo y parmesano, y albahaca</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/FIESTA2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">ENTRADA: Empanadas de carne, jamón y queso, pollo y Caprese</p>
@@ -47,10 +47,10 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
                     <img src="../imagenes/FIESTA6.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">10 variedades de pizzas</p>
+                      <p class="card-text">PIZZAS:10 variedades de pizzas, tradicionales y premium</p>
                     </div>
                 </div>
               </div>
@@ -60,24 +60,24 @@
         <div class="container">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/bebidas.jpg" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/bebidas.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">BEBIDAS: Agua, Cerveza, Gaseosas linea Coca,Aguas zaborizadas</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA1.png" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/PICADASFIESTA.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">PICADAS: Quesos,fiambres, snacks, pickles, panes</p>
                     </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/ZUNA2.png" class="card-img-top" alt="...">
+                <div class="card mx-auto mb-2" style="width: 18rem;">
+                    <img src="../imagenes/MESADULCE.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">MESA DULCE: Amplia variedad de postres caseros</p>
                     </div>
