Editando bootstrap,cambio de contenido - Segunda entrega del proyecto corregido

--- a/html/Productos.html
+++ b/html/Productos.html
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="subfooter">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>JDev</b></small>
+            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
         </div>
     </footer>
 </body>
