--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="subfooter">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jess</b></small>
+            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
         </div>
     </footer>
 </body>
