--- a/html/Servicios.html
+++ b/html/Servicios.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="subfooter">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jess</b></small>
+            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
         </div>
     </footer>
 </body>
