--- a/html/Productos.html
+++ b/html/Productos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title> 3 Soles Pizza Party </title>
+    <meta name="description" content="pizza party en zona sur">
+    <meta name= "keywords" content="pizzaparty,zona sur,lanus,pizza party en lanus,catering en lanus,3 soles pizza party, pizza lanus">
+    <title>3 Soles Pizza Party - Productos finger food - catering a domicilio - sandwiches</title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -15,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="header__navigation">
-            <a href="index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
+            <a href="../index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
             <a onclick="toggleShowMenu()" id="menuIcon"><i class="fas fa-bars"></i></a>
             <ul class="navigation__menu" id="navMenu">
                 <li class="menu__item"><a href="../index.html">INICIO</a></li>
@@ -26,12 +28,12 @@
             </ul>
         </nav>
     </header>
-    <main class="fondomain">
-        <h1 class="hTitulo">FINGER FOOD - CATERING</h1>
-        <div class="container">
+    <main class="main__fondo">
+        <h1 class="main__titulo">FINGER FOOD - CATERING</h1>
+        <div class="container p-4">
             <div class="row">
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">PIZZETAS: muzzarella - cebolla y queso</p>
@@ -39,7 +41,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA9.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">FORSFORITOS: JyQ</p>
@@ -47,7 +49,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">EMPANADAS: Carne - Jamón y Queso</p>
@@ -56,10 +58,10 @@
               </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container p-4">
             <div class="row">
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">CHIPS: pan blanco o salvado, JyQ o Crudo y Queso</p>
@@ -67,7 +69,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA8.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">SANDWICHES DE MIGA: triples - premium</p>
@@ -75,7 +77,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">SANDWICHES DE POLLO: con lechuga y tomate</p>
@@ -84,11 +86,11 @@
               </div>
             </div>
         </div>
-        <h1 class="hTitulo">PARA REGALAR</h1>
-        <div class="container">
+        <h1 class="main__titulo">PARA REGALAR</h1>
+        <div class="container p-4">
             <div class="row">
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA6.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">PICADAS</p>
@@ -96,7 +98,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA7.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">TORTA DE SANDWICHES</p>
@@ -104,7 +106,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/ZUNA10.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DESAYUNOS Y MERIENDAS</p>
@@ -115,32 +117,32 @@
         </div>
     </main>
     <footer>
-        <div class="footergrande">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="../imagenes/logofooter.png" alt="logo de 3 soles">
-                    </a>
-                </figure>
-            </div>
-            <div class="box">
-                <h2 id="titulo-footer">SOBRE NOSOTROS</h2>
-                    <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
-                    <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
-            </div>
-            <div class="box">
-                <h2 id="titulo-footer">SEGUINOS</h2>
-                <div class="redes-sociales">
-                    <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
-                    <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
-                    <a href="+54 11 3304 4420" class="fa fa-whatsapp"></a>
-                    <a href="3solespizzaparty@gmail.com" class="fa fa-envelope"></a>
-                </div>
+      <div class="footer">
+        <div class="footer__redes">
+            <figure>
+                <a href="#">
+                    <img src="../imagenes/logofooter.png" alt="logo de 3 soles">
+                </a>
+            </figure>
+        </div>
+        <div class="footer__redes">
+            <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
+                <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
+                <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
+        </div>
+        <div class="footer__redes">
+            <h2 id="footer__titulo">SEGUINOS</h2>
+            <div class="redes__sociales">
+                <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
+                <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
+                <a href="+54 11 3304 4420" class="fa fa-whatsapp"></a>
+                <a href="3solespizzaparty@gmail.com" class="fa fa-envelope"></a>
             </div>
         </div>
-        <div class="subfooter">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
-        </div>
+    </div>
+    <div class="footer__copyright">
+        <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
+    </div>
     </footer>
 </body>
 </html>
