--- a/html/Galeria.html
+++ b/html/Galeria.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title> 3 Soles Pizza Party </title>
+    <meta name="description" content="pizza party en zona sur">
+    <meta name= "keywords" content="pizzaparty,zona sur,lanus,pizza party en lanus,catering en lanus,3 soles pizza party, pizza lanus">
+    <title>3 Soles Pizza Party - Galeria de imagenes - eventos de pizza party</title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -14,7 +16,7 @@
 <body>
     <header class="header">
         <nav class="header__navigation">
-            <a href="index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
+            <a href="../index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
             <a onclick="toggleShowMenu()" id="menuIcon"><i class="fas fa-bars"></i></a>
             <ul class="navigation__menu" id="navMenu">
                 <li class="menu__item"><a href="../index.html">INICIO</a></li>
@@ -25,40 +27,40 @@
             </ul>
         </nav>
     </header>
-    <main class="fondomain">
-        <h1 class="hTitulo">EVENTOS</h1>
-        <div class="contenedorGal mx-auto mb-2">
-            <img src="../imagenes/FIESTA1.png" class="img-thumbnail" alt="fotodeevento">
-            <img src="../imagenes/FIESTA2.png" class="img-thumbnail" alt="empanadas">
-            <img src="../imagenes/FIESTA3.png" class="img-thumbnail" alt="staff">
-            <img src="../imagenes/FIESTA4.png" class="img-thumbnail" alt="mesadepostres">
-            <img src="../imagenes/FIESTA5.png" class="img-thumbnail" alt="fotodeevento">
-            <img src="../imagenes/FIESTA6.png" class="img-thumbnail" alt="pizzademuzarella">
-            <img src="../imagenes/FIESTA7.png" class="img-thumbnail" alt="fotodeevento">
-            <img src="../imagenes/FIESTA8.png" class="img-thumbnail" alt="fotodeevento">
-            <img src="../imagenes/FIESTA9.png" class="img-thumbnail" alt="staff">
-            <img src="../imagenes/FIESTA10.png" class="img-thumbnail" alt="picadas">
-            <img src="../imagenes/FIESTA11.png" class="img-thumbnail" alt="pizzaderucula">
-            <img src="../imagenes/FIESTA12.png" class="img-thumbnail" alt="postres">
+    <main class="main__fondo">
+        <h1 class="main__titulo">EVENTOS</h1>
+        <div class="galeria__contenedor mx-auto mb-2">
+            <img src="../imagenes/FIESTA1.png" class="img-thumbnail scale" alt="fotodeevento">
+            <img src="../imagenes/FIESTA2.png" class="img-thumbnail scale" alt="empanadas">
+            <img src="../imagenes/FIESTA3.png" class="img-thumbnail scale" alt="staff">
+            <img src="../imagenes/FIESTA4.png" class="img-thumbnail scale" alt="mesadepostres">
+            <img src="../imagenes/FIESTA5.png" class="img-thumbnail scale" alt="fotodeevento">
+            <img src="../imagenes/FIESTA6.png" class="img-thumbnail scale" alt="pizzademuzarella">
+            <img src="../imagenes/FIESTA7.png" class="img-thumbnail scale" alt="fotodeevento">
+            <img src="../imagenes/FIESTA8.png" class="img-thumbnail scale" alt="fotodeevento">
+            <img src="../imagenes/FIESTA9.png" class="img-thumbnail scale" alt="staff">
+            <img src="../imagenes/FIESTA10.png" class="img-thumbnail scale" alt="picadas">
+            <img src="../imagenes/FIESTA11.png" class="img-thumbnail scale" alt="pizzaderucula">
+            <img src="../imagenes/FIESTA12.png" class="img-thumbnail scale" alt="postres">
         </div>    
     </main>
     <footer>
-        <div class="footergrande">
-            <div class="box">
+        <div class="footer">
+            <div class="footer__redes">
                 <figure>
                     <a href="#">
                         <img src="../imagenes/logofooter.png" alt="logo de 3 soles">
                     </a>
                 </figure>
             </div>
-            <div class="box">
-                <h2 id="titulo-footer">SOBRE NOSOTROS</h2>
+            <div class="footer__redes">
+                <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
                     <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
                     <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
             </div>
-            <div class="box">
-                <h2 id="titulo-footer">SEGUINOS</h2>
-                <div class="redes-sociales">
+            <div class="footer__redes">
+                <h2 id="footer__titulo">SEGUINOS</h2>
+                <div class="redes__sociales">
                     <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
                     <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
                     <a href="+54 11 3304 4420" class="fa fa-whatsapp"></a>
@@ -66,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div class="subfooter">
+        <div class="footer__copyright">
             <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
         </div>
     </footer>
