--- a/html/Servicios.html
+++ b/html/Servicios.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title> 3 Soles Pizza Party </title>
+    <meta name="description" content="pizza party en zona sur">
+    <meta name= "keywords" content="pizzaparty,zona sur,lanus,pizza party en lanus,catering en lanus,3 soles pizza party, pizza lanus">
+    <title>3 Soles Pizza Party - servicios de pizzas, picadas, bebidas y postres</title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -15,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="header__navigation">
-            <a href="index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
+            <a href="../index.html"><img src="../imagenes/logo2.jpg" alt="Logo 3 soles pizza party"></a>
             <a onclick="toggleShowMenu()" id="menuIcon"><i class="fas fa-bars"></i></a>
             <ul class="navigation__menu" id="navMenu">
                 <li class="menu__item"><a href="../index.html">INICIO</a></li>
@@ -26,12 +28,13 @@
             </ul>
         </nav>
     </header>
-    <main class="fondomain">
-        <h1 class="hTitulo">PIZZA PARTY</h1>
-        <div class="container">
+    <main>
+        <h1 class="main__titulo">PIZZA PARTY</h1>
+        <h1 class="main__sub__titulo">El servicio es libre por 3hs, incluye camareras, cocineros, vajilla descartable y servilletas.</h1>
+        <div class="container p-4">
             <div class="row">
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/FIESTA13.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">ENTRADA: Panes saborizados de Ajo y parmesano, y albahaca</p>
@@ -39,7 +42,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/FIESTA2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">ENTRADA: Empanadas de carne, jamón y queso, pollo y Caprese</p>
@@ -47,7 +50,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/FIESTA6.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">PIZZAS:10 variedades de pizzas, tradicionales y premium</p>
@@ -56,11 +59,12 @@
               </div>
             </div>
         </div>
-        <h1 class="hTitulo">ADICIONALES</h1>
-        <div class="container">
+        <h1 class="main__titulo">ADICIONALES</h1>
+        <h1 class="main__sub__titulo">Podes optar por algunos de nuestros servicios opcionales para complementar tu fiesta.</h1>
+        <div class="container p-4">
             <div class="row">
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/bebidas.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">BEBIDAS: Agua, Cerveza, Gaseosas linea Coca,Aguas zaborizadas</p>
@@ -68,7 +72,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/PICADASFIESTA.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">PICADAS: Quesos,fiambres, snacks, pickles, panes</p>
@@ -76,7 +80,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card mx-auto mb-2" style="width: 18rem;">
+                <div class="card mx-auto mb-2 container__servicios" style="width: 18rem;">
                     <img src="../imagenes/MESADULCE.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">MESA DULCE: Amplia variedad de postres caseros</p>
@@ -87,32 +91,32 @@
         </div>
     </main>
     <footer>
-        <div class="footergrande">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="../imagenes/logofooter.png" alt="logo de 3 soles">
-                    </a>
-                </figure>
-            </div>
-            <div class="box">
-                <h2 id="titulo-footer">SOBRE NOSOTROS</h2>
-                    <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
-                    <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
-            </div>
-            <div class="box">
-                <h2 id="titulo-footer">SEGUINOS</h2>
-                <div class="redes-sociales">
-                    <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
-                    <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
-                    <a href="+54 11 3304 4420" class="fa fa-whatsapp"></a>
-                    <a href="3solespizzaparty@gmail.com" class="fa fa-envelope"></a>
-                </div>
+      <div class="footer">
+        <div class="footer__redes">
+            <figure>
+                <a href="#">
+                    <img src="../imagenes/logofooter.png" alt="logo de 3 soles">
+                </a>
+            </figure>
+        </div>
+        <div class="footer__redes">
+            <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
+                <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
+                <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
+        </div>
+        <div class="footer__redes">
+            <h2 id="footer__titulo">SEGUINOS</h2>
+            <div class="redes__sociales">
+                <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
+                <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
+                <a href="+54 11 3304 4420" class="fa fa-whatsapp"></a>
+                <a href="3solespizzaparty@gmail.com" class="fa fa-envelope"></a>
             </div>
         </div>
-        <div class="subfooter">
-            <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
-        </div>
+      </div>
+    <div class="footer__copyright">
+        <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
+    </div>
     </footer>
 </body>
 </html>
