--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>3 Soles Pizza Party</title>
+    <meta name="description" content="pizza party en zona sur">
+    <meta name= "keywords" content="pizzaparty,zona sur,lanus,pizza party en lanus,catering en lanus,3 soles pizza party, pizza lanus">
+    <title>3 Soles Pizza Party - Bienvenidos - servicio de catering</title>
     <link rel="shortcut icon" href="imagenes/favicon.jpg" type="image/jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -55,22 +57,22 @@
           </div>
     </main>
     <footer>
-        <div class="footergrande">
-            <div class="box">
+        <div class="footer">
+            <div class="footer__redes">
                 <figure>
                     <a href="#">
                         <img src="imagenes/logofooter.png" alt="logo de 3 soles">
                     </a>
                 </figure>
             </div>
-            <div class="box">
-                <h2 id="titulo-footer">SOBRE NOSOTROS</h2>
+            <div class="footer__redes">
+                <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
                     <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
                     <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
             </div>
-            <div class="box">
-                <h2 id="titulo-footer">SEGUINOS</h2>
-                <div class="redes-sociales">
+            <div class="footer__redes">
+                <h2 id="footer__titulo">SEGUINOS</h2>
+                <div class="redes__sociales">
                     <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
                     <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
                     <a href="+54 11 3304 4420" class="fa fa-whatsapp"></a>
@@ -78,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="subfooter">
+        <div class="footer__copyright">
             <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
         </div>
     </footer>
