--- a/html/Productos.html
+++ b/html/Productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta name="description" content="pizza party en zona sur">
+    <meta name="description" content="servicio de catering a domicilio zona sur Cel: 011 3304-4420">
     <meta name= "keywords" content="pizzaparty,zona sur,lanus,pizza party en lanus,catering en lanus,3 soles pizza party, pizza lanus">
     <title>3 Soles Pizza Party - Productos finger food - catering a domicilio - sandwiches</title>
     <link rel="shortcut icon" href="../imagenes/favicon.jpg" type="image/jpg">
@@ -141,7 +141,7 @@
         </div>
     </div>
     <div class="footer__copyright">
-        <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jessica</b></small>
+        <small>&copy;2021 3Soles Pizza Party - Desarrollado por <b>Jess</b>Dev</small>
     </div>
     </footer>
 </body>
