--- a/html/Servicios.html
+++ b/html/Servicios.html
@@ -101,7 +101,7 @@
         </div>
         <div class="footer__redes">
             <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
-                <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
+                <p>Somos una empresa familiar dedicada a brindar servicios de gastronomía, con más de 12 años en el rubro.</p>
                 <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
         </div>
         <div class="footer__redes">
