--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="footer__redes">
                 <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
-                    <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
+                    <p>Somos una empresa familiar dedicada a brindar servicios de gastronomía, con más de 12 años en el rubro.</p>
                     <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
             </div>
             <div class="footer__redes">
@@ -75,7 +75,7 @@
                 <div class="redes__sociales">
                     <a href="http://facebook.com/3solespizzaparty" class="fa fa-facebook"></a>
                     <a href="http://instagram.com/pizzaparty3soles" class="fa fa-instagram"></a>
-                    <a href="https://api.whatsapp.com/send?phone=+5491133044420&text=Hola, Nececito mas informacion!" class="fa fa-whatsapp"></a>
+                    <a href="https://api.whatsapp.com/send?phone=+5491133044420&text=Hola, quiero un presupuesto." class="fa fa-whatsapp"></a>
                     <a href="3solespizzaparty@gmail.com" class="fa fa-envelope"></a>
                 </div>
             </div>
