--- a/html/Galeria.html
+++ b/html/Galeria.html
@@ -29,20 +29,36 @@
     </header>
     <main class="main__fondo">
         <h1 class="main__titulo">EVENTOS</h1>
-        <div class="galeria__contenedor mx-auto mb-2">
-            <img src="../imagenes/FIESTA1.png" class="img-thumbnail scale" alt="fotodeevento">
-            <img src="../imagenes/FIESTA2.png" class="img-thumbnail scale" alt="empanadas">
-            <img src="../imagenes/FIESTA3.png" class="img-thumbnail scale" alt="staff">
-            <img src="../imagenes/FIESTA4.png" class="img-thumbnail scale" alt="mesadepostres">
-            <img src="../imagenes/FIESTA5.png" class="img-thumbnail scale" alt="fotodeevento">
-            <img src="../imagenes/FIESTA6.png" class="img-thumbnail scale" alt="pizzademuzarella">
-            <img src="../imagenes/FIESTA7.png" class="img-thumbnail scale" alt="fotodeevento">
-            <img src="../imagenes/FIESTA8.png" class="img-thumbnail scale" alt="fotodeevento">
-            <img src="../imagenes/FIESTA9.png" class="img-thumbnail scale" alt="staff">
-            <img src="../imagenes/FIESTA10.png" class="img-thumbnail scale" alt="picadas">
-            <img src="../imagenes/FIESTA11.png" class="img-thumbnail scale" alt="pizzaderucula">
-            <img src="../imagenes/FIESTA12.png" class="img-thumbnail scale" alt="postres">
-        </div>    
+        <div id="carousel__indicadores" class="carousel container-sm slide mx-auto mb-2" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carousel__indicadores" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carousel__indicadores" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carousel__indicadores" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carousel__indicadores" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../imagenes/slide5.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../imagenes/slide6.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../imagenes/slide7.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../imagenes/slide8.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel__indicadores" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel__indicadores" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
     <footer>
         <div class="footer">
@@ -55,7 +71,7 @@
             </div>
             <div class="footer__redes">
                 <h2 id="footer__titulo">SOBRE NOSOTROS</h2>
-                    <p>Somos una empresa familiar dedicada a bridar servicios de gastronomía, con más de 12 años en el rubro.</p>
+                    <p>Somos una empresa familiar dedicada a brindar servicios de gastronomía, con más de 12 años en el rubro.</p>
                     <p>Llevamos todo al lugar de tu evento, también hacemos envíos de nuestros productos para que disfrutes de tu celebración.</p>
             </div>
             <div class="footer__redes">
